update package